[package]
name = "lblp-markdown-plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
extism-convert = "1.9.1"
extism-pdk = "1.3.0"
serde = { version = "1", features = ["derive"] }
logic_based_learning_paths = { version = "0.0.1", path = "/home/vincentn/Projects/logic_based_learning_paths/rust-workspace/logic_based_learning_paths/" }
schemars = "0.8.21"
