[package]
name = "lblp-markdown-plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
extism-convert = "1.9.1"
extism-pdk = "1.3.0"
serde = { version = "1", features = ["derive"] }
logic_based_learning_paths = { version = "0.0.1", path = "/home/vincentn/Projects/logic_based_learning_paths/rust-workspace/logic_based_learning_paths/" }
schemars = "0.8.21"
serde_json = "1.0.135"
base64 = "0.22.1"
comrak = { version = "0.24.1", features = [ "syntect", "emojis" ] }
ego-tree = "0.6.2" # needs to match scraper
pretty_assertions = "1.4.0"
regex = "1.10.5"
scraper = "0.20.0"
walkdir = "2.5.0"
anyhow = "1.0.95"
